renderer2d/tiles/TileMercatorSVG: Fix Java9+ deprecation for new Float.